--- a/help/кеки.md
+++ b/help/кеки.md
@@ -4,6 +4,8 @@
 
 Пока существует один постоянный кек — `спокойной ночи` и три вероятных — `да`, `нет`, `дура`. Условия кеков указаны ниже.
 
+Вероятные кеки отвечают не на каждое сообщение.
+
 - `да`: сообщение оканчивается на "да"
 - `нет`: сообщение оканчивается на "нет"
 - `дура`: сообщение оканчивается на "дура"
