split util and add MSK+2

--- a/help/озвучка.md
+++ b/help/озвучка.md
@@ -8,7 +8,7 @@
 
 Преобразование текста в речь на русском, английском, японском, китайском и корейском языках.
 
-Команды: русский — `озвучь`, английский — `tts`, японский — `vnsay`, китайский — `sayccp`, корейский — `kosay`.
+Команды: русский — `озвучь`, английский — `tts`, японский — `vnsay`, китайский — `sayccp`, корейский — `kosay`, украинский — `мова божія`.
 
 Пример работы:
 
@@ -19,3 +19,13 @@
 ```
 
 Озвучивание на языке, не соответствующем языку текста может приводить к неожиданным результатам.
+
+```
+#01 1> паляниця
+#02 2> [>>01] озвучь
+#03 A> [>>02] [Voice message]
+#04 1> Не так!
+#05 1> [>>01] мова божія
+#06 A> [>>05] [Voice message]
+#07 1> Так-то лучше!
+```
