fix transliterate command (output single message)

--- a/help/commands/клавиатура.md
+++ b/help/commands/клавиатура.md
@@ -7,7 +7,7 @@
 
 `kb`, `ли`, `layout`, `дфнщге`, `раскладка`, `hfcrkflrf`, `рас`, `hfc` — меняют раскладку аргумента с QWERTY на ЙЦУКЕН и наоборот.
 
-`trl`, `translit`, `iuliia`, `трл`, `транслит`, `йуля` — транслитерирует русский на английский и наоборот (немного криво). TODO склеить два соо в одно...
+`trl`, `translit`, `iuliia`, `трл`, `транслит`, `йуля` — транслитерирует русский на английский и наоборот (немного криво).
 
 ```
 #01 1> ghbdtn dctv!
