add todo to имя.md but still too lazy to fix

--- a/help/commands/имя.md
+++ b/help/commands/имя.md
@@ -35,3 +35,7 @@
 #15 2> погладить @user1 по голове
 #16 A> [>>15] 🤗 | {user2} погладил(а) {user1} по голове
 ```
+
+TODO описания новой системы местоимений
+TODO переписать ?имя ?мест
+TODO описания перенаправления упоминаний
