--- a/help/commands/имя.md
+++ b/help/commands/имя.md
@@ -39,3 +39,4 @@
 TODO описания новой системы местоимений
 TODO переписать ?имя ?мест
 TODO описания перенаправления упоминаний
+TODO прилепить куда-нибудь про языки...
